Added comment support. Routing needs to be revisited and tested
