# backend/src/main/kotlin/elsys/amalino7/db/schema.kt
@@ -1,6 +1,6 @@
-import org.jetbrains.exposed.v1.core.Table
-import org.jetbrains.exposed.v1.core.alias
-import org.jetbrains.exposed.v1.core.countDistinct
+import org.jetbrains.exposed.v1.core.*
+import org.jetbrains.exposed.v1.core.SqlExpressionBuilder.eq
+import org.jetbrains.exposed.v1.core.dao.id.IntIdTable
 import org.jetbrains.exposed.v1.core.dao.id.UUIDTable
 import org.jetbrains.exposed.v1.javatime.CurrentTimestamp
 import org.jetbrains.exposed.v1.javatime.timestamp
@@ -45,7 +45,7 @@ object Likes : Table() {
     }
 }
 
-object Comments : Table() {
+object Comments : IntIdTable("comments") {
     val postId = reference("post_id", Posts).index()
     val userId = reference("user_id", Users).index()
     val content = text("content")
@@ -65,4 +65,11 @@ object PostAggregates {
     val likes = Likes.userId.countDistinct().alias("like_count")
     val comments = Comments.userId.countDistinct().alias("comment_count")
     val reposts = Reposts.userId.countDistinct().alias("repost_count")
+}
+
+object hasLiked {
+    val hasLiked = Case()
+        .When((Likes.userId eq null) and (Likes.postId eq Posts.id), booleanLiteral(true))
+        .Else(booleanLiteral(false))
+        .alias("has_liked").alias("has_liked")
 }
